--- a/index.html
+++ b/index.html
@@ -234,6 +234,11 @@
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             font-size: 14px;
+            display: none; /* Initially hidden */
+        }
+
+        .add-btn.visible {
+            display: block; /* Show only when authorized */
         }
 
         .add-btn:hover {
@@ -354,6 +359,29 @@
             background: #1557b0;
         }
 
+        .auth-modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            align-items: center;
+            justify-content: center;
+            z-index: 200;
+        }
+
+        .auth-content {
+            background: #fff;
+            padding: 20px;
+            border-radius: 15px;
+            width: 90%;
+            max-width: 400px;
+            text-align: center;
+            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.2);
+        }
+
         footer {
             text-align: center;
             padding: 20px;
@@ -375,6 +403,7 @@
             .new-badge span { font-size: 8px; }
             .airdrop-emoji { width: 20px; height: 20px; }
             .action-btn { font-size: 16px; margin: 0 3px; }
+            .auth-content { width: 90%; padding: 15px; }
         }
 
         @media (max-width: 480px) {
@@ -440,7 +469,7 @@
                 <tbody id="projectTable"></tbody>
             </table>
         </div>
-        <button class="add-btn" onclick="showModal()">Add New Project</button>
+        <button class="add-btn" id="addBtn" onclick="showModal()">Add New Project</button>
     </div>
 
     <div class="modal" id="addModal">
@@ -502,23 +531,49 @@
         </div>
     </div>
 
+    <div class="auth-modal" id="authModal">
+        <div class="auth-content">
+            <h2>Authorization Required</h2>
+            <p>Enter the secret key to access the "Add New Project" feature:</p>
+            <input type="password" id="authKey" placeholder="Secret Key" style="width: 80%; padding: 10px; margin: 10px 0;">
+            <button onclick="authenticate()">Submit</button>
+        </div>
+    </div>
+
     <footer>
         © 2025 Airdrop Tracker | Built with ❤️ for Crypto Enthusiasts
     </footer>
 
     <script>
         let projects = [];
+        let isAuthorized = false;
+        const SECRET_KEY = '852096@Rishu'; // Your secret key set here
+
+        // Show auth modal on page load
+        window.onload = function() {
+            document.getElementById('authModal').style.display = 'flex';
+        };
+
+        function authenticate() {
+            const inputKey = document.getElementById('authKey').value;
+            if (inputKey === SECRET_KEY) {
+                isAuthorized = true;
+                document.getElementById('authModal').style.display = 'none';
+                document.getElementById('addBtn').classList.add('visible');
+            } else {
+                alert('Incorrect key! Try again.');
+            }
+        }
 
         // Load data from Google Sheets CSV
         async function loadProjects() {
             try {
                 const response = await fetch('https://docs.google.com/spreadsheets/d/e/2PACX-1vQQiUVzkIpKs1u5-ZwXJsmi1apJvRaX97cP8sI1AFGmG7R9ga2hESKWnaBDsOuCeXOM09HARizfNjTv/pub?output=csv');
                 const csvText = await response.text();
-                console.log('Raw CSV data:', csvText); // Debug log
+                console.log('Raw CSV data:', csvText);
 
                 // Parse CSV manually
                 const rows = csvText.trim().split('\n').map(row => {
-                    // Handle commas within fields by splitting carefully
                     const values = [];
                     let currentValue = '';
                     let insideQuotes = false;
@@ -538,13 +593,11 @@
                     return values;
                 });
 
-                // Get headers
                 const headers = rows[0].map(header => header.replace(/^"|"$/g, '').trim());
-                console.log('Headers:', headers); // Debug log
+                console.log('Headers:', headers);
 
-                // Get data rows (skip header row)
                 const dataRows = rows.slice(1);
-                console.log('Data rows:', dataRows); // Debug log
+                console.log('Data rows:', dataRows);
 
                 projects = dataRows.map(row => {
                     const project = {};
@@ -566,7 +619,7 @@
                     };
                 });
 
-                console.log('Mapped projects:', projects); // Debug log
+                console.log('Mapped projects:', projects);
                 renderTable();
             } catch (error) {
                 console.error('Error loading projects:', error);
@@ -640,6 +693,10 @@
         }
 
         function showModal() {
+            if (!isAuthorized) {
+                alert('Please authorize first!');
+                return;
+            }
             document.getElementById('addModal').style.display = 'flex';
             document.getElementById('projectForm').reset();
             editIndex = -1;
@@ -663,7 +720,7 @@
                 },
                 body: JSON.stringify({
                     action: 'update',
-                    index: index + 1, // Adjust for header row
+                    index: index + 1,
                     project: {
                         'Project Name': project.name,
                         'Daily Status': project.completed ? 'TRUE' : 'FALSE',
@@ -680,12 +737,16 @@
                 })
             }).then(() => {
                 console.log('Save request sent successfully');
-                setTimeout(loadProjects, 1000); // Delay to ensure sheet updates
+                setTimeout(loadProjects, 1000);
             }).catch(error => console.error('Fetch Error:', error));
         }
 
         document.getElementById('projectForm').addEventListener('submit', async (e) => {
             e.preventDefault();
+            if (!isAuthorized) {
+                alert('Please authorize first!');
+                return;
+            }
             const formData = new FormData(e.target);
             const project = {
                 'Project Name': formData.get('name'),
@@ -715,7 +776,7 @@
             }).then(() => {
                 console.log('Add request sent successfully');
                 hideModal();
-                setTimeout(loadProjects, 1000); // Delay to ensure sheet updates
+                setTimeout(loadProjects, 1000);
             }).catch(error => console.error('Fetch Error:', error));
         });
 
@@ -745,11 +806,11 @@
                 },
                 body: JSON.stringify({
                     action: 'delete',
-                    index: index + 1 // Adjust for header row
+                    index: index + 1
                 })
             }).then(() => {
                 console.log('Delete request sent successfully');
-                setTimeout(loadProjects, 1000); // Delay to ensure sheet updates
+                setTimeout(loadProjects, 1000);
             }).catch(error => console.error('Fetch Error:', error));
         }
 
@@ -775,25 +836,49 @@
             stars.forEach(star => star.classList.remove('filled'));
         }
 
-        function checkReset() {
-            const now = new Date();
-            const istOffset = 5.5 * 60 * 60 * 1000;
-            const istTime = new Date(now.getTime() + istOffset);
-            const nextReset = new Date(istTime);
-            nextReset.setHours(6, 0, 0, 0);
-            if (istTime.getHours() >= 6) nextReset.setDate(nextReset.getDate() + 1);
+        async function checkReset() {
+            try {
+                const response = await fetch('http://worldtimeapi.org/api/timezone/Asia/Kolkata');
+                const data = await response.json();
+                const istTime = new Date(data.datetime);
+                const nextReset = new Date(istTime);
+                nextReset.setHours(6, 0, 0, 0);
+                if (istTime.getHours() >= 6) nextReset.setDate(nextReset.getDate() + 1);
 
-            const timeToReset = nextReset - istTime;
-            setTimeout(() => {
-                projects.forEach((project, index) => {
-                    if (project.completed) {
-                        project.completed = false;
-                        saveProject(index);
-                    }
-                });
-                loadProjects();
-                checkReset();
-            }, timeToReset);
+                const timeToReset = nextReset - istTime;
+                console.log('Next reset at:', nextReset, 'in', timeToReset / 1000 / 60, 'minutes');
+
+                setTimeout(() => {
+                    projects.forEach((project, index) => {
+                        if (project.completed) {
+                            project.completed = false;
+                            saveProject(index);
+                        }
+                    });
+                    loadProjects();
+                    checkReset();
+                }, timeToReset);
+            } catch (error) {
+                console.error('Error fetching time:', error);
+                const now = new Date();
+                const istOffset = 5.5 * 60 * 60 * 1000;
+                const istTime = new Date(now.getTime() + istOffset);
+                const nextReset = new Date(istTime);
+                nextReset.setHours(6, 0, 0, 0);
+                if (istTime.getHours() >= 6) nextReset.setDate(nextReset.getDate() + 1);
+
+                const timeToReset = nextReset - istTime;
+                setTimeout(() => {
+                    projects.forEach((project, index) => {
+                        if (project.completed) {
+                            project.completed = false;
+                            saveProject(index);
+                        }
+                    });
+                    loadProjects();
+                    checkReset();
+                }, timeToReset);
+            }
         }
 
         loadProjects();
